<resources>
    <string name="app_name">Prevengos PRL</string>
    <string name="main_message">Sincroniza tus cuestionarios médicos incluso sin conexión.</string>
    <string name="label_nif">NIF</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellidos">Apellidos</string>
    <string name="label_telefono">Teléfono</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_nota">Notas de anamnesis</string>
    <string name="label_plantilla">Código de plantilla</string>
    <string name="label_estado">Estado</string>
    <string name="action_guardar">Guardar</string>
    <string name="action_actualizar">Actualizar</string>
    <string name="action_nuevo_paciente">Nuevo paciente</string>
    <string name="action_editar_paciente">Editar paciente</string>
    <string name="action_nuevo_cuestionario">Nuevo cuestionario</string>
    <string name="action_editar_cuestionario">Editar cuestionario</string>
    <string name="title_pacientes">Pacientes</string>
    <string name="title_cuestionarios">Cuestionarios</string>
    <string name="label_paciente_seleccionado">Selecciona un paciente para continuar</string>
    <string name="label_paciente_seleccionado_con_nombre">Paciente seleccionado: %1$s</string>
    <string name="empty_cuestionarios">Sin cuestionarios para el paciente seleccionado</string>
    <string name="error_campos_obligatorios">Los campos obligatorios no pueden estar vacíos</string>
    <string name="error_campo_requerido">Campo requerido</string>
    <string name="error_email_invalido">El correo electrónico no es válido</string>
    <string name="error_paciente_no_seleccionado">Selecciona un paciente para continuar</string>
    <string name="error_cuestionario_obligatorio">Indica plantilla y estado del cuestionario</string>
    <string name="error_cuestionario_no_encontrado">Cuestionario no disponible</string>
    <string name="error_operacion_generica">Se produjo un error, inténtalo de nuevo</string>
    <string name="mensaje_paciente_guardado">Paciente registrado correctamente</string>
    <string name="mensaje_paciente_actualizado">Paciente actualizado correctamente</string>
    <string name="mensaje_cuestionario_guardado">Cuestionario guardado correctamente</string>
    <string name="mensaje_cuestionario_actualizado">Cuestionario actualizado correctamente</string>
    <string name="dialog_titulo_nuevo_paciente">Nuevo paciente</string>
    <string name="dialog_titulo_editar_paciente">Editar paciente</string>
    <string name="dialog_titulo_nuevo_cuestionario">Nuevo cuestionario</string>
    <string name="dialog_titulo_editar_cuestionario">Editar cuestionario</string>
    <string name="sin_pacientes">Sin pacientes registrados aún</string>
</resources>
